objects/Field_Trip__Object_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>Field_Trip__Fields__c</fullName>
        <label>Fields</label>
        <summaryForeignKey>Field_Trip__Field_Analysis__c.Field_Trip__Object_Analysis__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Filter__c</fullName>
        <label>Filter</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Last_Analyzed__c</fullName>
        <label>Last Analyzed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Last_Batch_Id__c</fullName>
        <label>Last Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Object_Label__c</fullName>
        <label>Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Record_Types__c</fullName>
        <label>Record Types</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Records__c</fullName>
        <label>Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Tally__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tally (Temporary)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Trip__isCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>